--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -1,4 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Чугуевская центральная библиотека";
 }
+<div class="wrapper">
+     <div class="container">
+        <div class="row mt-5">
+            <div class="col text-center">
+                <h1>Приветствуем Вас!</h1>
+                <p>
+                    Мы рады приветствовать Вас на информационном сайте
+                    Чугуевская центральная библиотека.
+                </p>
+
+                <p>
+                С помощью представленной информации на сайте, Вы всегда будете в курсе наших мероприятий,
+                которые проводятся в библиотеках,книжных и журнальных новинок, узнаете последние новости библиотечной жизни. 
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 
