--- a/WebApplication1/Views/News/NewsList.cshtml
+++ b/WebApplication1/Views/News/NewsList.cshtml
@@ -3,39 +3,80 @@
 @{
     ViewData["Title"] = "Наши новости";
 }
+
+@{
+    if (Model.newsList != null && Model.newsList.Count > 0)
+        foreach (var item in Model.newsList)
+        {
+    <tr>
+
+                <td>@item.NewsId</td>
+                <td>@item.Title</td>
+                <td>@item.Description</td>
+                <td>@item.Date_create</td>
+                <td>@item.Date_update</td>
+
+    </tr>
+     
+ }
+
+ }
 <h1>@ViewData["Title"]</h1>
 
+<div>
+    <h1>Приветствуем Вас!</h1>
+    <p>Вы находитесь на страничке отдела обсуживания читателей. <br />
+        Тут Вы можете узнать о графике нашей работы, найти наши контакты, а также узнать о жизни нашего отдела.<br />
+        Мы всегда рады видеть Вас в гостях!
+    </p>
+</div>
 
-<div class=" = row">
-    <div class="col-lg-12 col-md-12">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    if (Model.newsList != null && Model.newsList.Count > 0)
-                        foreach (var item in Model.newsList)
-                        {
-                                <tr>
+<div class="row">
 
-                                    <td>@item.NewsId</td>
-                                    <td>@item.Title</td>
-                                    <td>@item.Description</td>
-                                    <td>@item.Date_create</td>
-                                    <td>@item.Date_update</td>
-                                </tr>
-                            
-                        }
+    <div class="col-6 ps-1">
+        <h1>График нашей работы</h1>
+        <p>Вт-Чт: с 9:00 до 18:00, 
+            <br>Пт: с 14:00 до 22:00. 
+            <br>Суббота, Воскресенье: с 10:00 до 17:00. 
+            <br> Обед: с 14:00 до 15:00.
+            <br>Выходной: Понедельник.
+        </p>
 
-                }
-            </tbody>
+    </div>
 
-            </table>
+    <div class="col-6 pe-1">
+
+
     </div>
 </div>
+
+<div class="row mb-2">
+
+    <div class="col-md-6">
+
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+
+        <div class="col p-4 d-flex flex-column position-static">
+
+          <h3 class="mb-0">Спортивные эстафеты по сказкам А. С Пушкина с. Верхняя Бреевка</h3>
+
+          <div class="mb-1 text-muted">Nov 12</div>
+
+          <p class="card-text mb-auto">
+              В замечательный праздник - Пушкинский день России заведующий библиотекой-филиалом Романишин Инна Игоревна из с. 
+              Верхняя Бреевка для ребят из летнего лагеря МКОУ СОШ №11 провела спортивные эстафеты по сказкам А. С Пушкина.
+          </p>
+
+          <a href="#" class="stretched-link">Подробнее...</a>
+
+        </div>
+
+        <div class="col-auto d-none d-lg-block">
+
+          <img class="bd-placeholder-img" width="200" height="250" src="/img/news-img/1.jpg" role="img"  preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+
+        </div>
+
+      </div>
+</div>
+
