--- a/WebApplication1/Views/News/NewsList.cshtml
+++ b/WebApplication1/Views/News/NewsList.cshtml
@@ -34,18 +34,27 @@
 <div class="row">
 
     <div class="col-6 ps-1">
-        <h1>График нашей работы</h1>
-        <p>Вт-Чт: с 9:00 до 18:00, 
-            <br>Пт: с 14:00 до 22:00. 
-            <br>Суббота, Воскресенье: с 10:00 до 17:00. 
-            <br> Обед: с 14:00 до 15:00.
-            <br>Выходной: Понедельник.
+        <h3>График нашей работы</h3>
+            <span>Вт-Чт: с 9:00 до 18:00,</span> 
+            <span>Пт: с 14:00 до 22:00. </span> 
+            <span>Суббота, Воскресенье: с 10:00 до 17:00.</span>
+            <span>Обед: с 14:00 до 15:00.</span> 
+            <span>Выходной: Понедельник.</span> 
         </p>
-
     </div>
 
     <div class="col-6 pe-1">
+    <h3>Наши переодические издания:</h3>
+            <li><span>Родина</span></li> 
+            <li><span>Наша кухня</span></li> 
+            <li><span>Приусадебный</span></li>
+            <li><span>100 советов дачнику</span></li>
+            <li><span>Приусадебное хозяйство</span></li>
 
+         
+            <li><span>Домашний очаг</span></li>
+            <li><span>Вокруг света</span></li>
+            <li><span>Бурда</span></li>
 
     </div>
 </div>
