--- a/WebApplication1/Views/ALLInfo/Index.cshtml
+++ b/WebApplication1/Views/ALLInfo/Index.cshtml
@@ -7,22 +7,27 @@
         
         <div class="col-4">
             <h3>Наш адрес</h3>
-            <span>Мы рады видеть Вас по адресу: с.Чугуевка, ул. 50 лет октября 191</span>
+            <span>Мы рады видеть Вас по адресу: <br/> с.Чугуевка, ул. 50 лет октября 191</span>
         </div>
         <div class="col-4">
             <h3>Наш график работы</h3>
-            <span>Вт-Пт: с 9:00 до 18:00</span>
-            <span>Сб,Вс: с 10:00 до 17:00</span>
-            <span>Перерыв: с 13:00 до 14:00</span>
-            <span>Выходной:Понедельник</span>
-            <span>Последня пятница каждого месяца санитарный день</span>
+            <div>Вт-Пт: с 9:00 до 18:00</div>
+            <div>Сб,Вс: с 10:00 до 17:00</div>
+            <div>Перерыв: с 13:00 до 14:00</div>
+            <div>Выходной:Понедельник</div>
+            <div>Последня пятница каждого месяца санитарный день</div>
         </div>
         <div class="col-4">
             <h3>Связь с нами</h3>
-            <span>Телефон заведующего ЦБС- +7(42372)21-9-59</span>
-            <span>Электронная почта заведующего ЦБС (Панасюк Н. Г.) <a href="mailto:tzenter.biblioteka.chuguevka@yandex.ru">tzenter.biblioteka.chuguevka@yandex.ru</a> </span>
-            <span>Электронная почта экономиста (Белошицкая И. В.) <a href="mailto:beloschitskaya.irina@yandex.ru">beloschitskaya.irina@yandex.ru</a></span>
-            <span>Электронная почта Отдела обслуживания <a href="mailto:tzenther.biblioteka.oo@yandex.ru">tzenther.biblioteka.oo@yandex.ru</a></span>
+            <ul>
+                <li>Телефон заведующего ЦБС- +7(42372)21-9-59</li>
+                <li>Электронная почта заведующего ЦБС (Панасюк Н. Г.) <a href="mailto:tzenter.biblioteka.chuguevka@yandex.ru">tzenter.biblioteka.chuguevka@yandex.ru</a></li>
+                <li>Электронная почта экономиста (Белошицкая И. В.) <a href="mailto:beloschitskaya.irina@yandex.ru">beloschitskaya.irina@yandex.ru</a></li>
+                <li>Электронная почта Отдела обслуживания <a href="mailto:tzenther.biblioteka.oo@yandex.ru">tzenther.biblioteka.oo@yandex.ru</a></li>
+            </ul>
+        
         </div>
+
+    </div>
 
 </div>
