--- a/WebApplication1/Views/News/Create.cshtml
+++ b/WebApplication1/Views/News/Create.cshtml
@@ -13,8 +13,8 @@
             </div>
             
             <div class="form-group">
-                <label asp-for="Image" class="control-label">Загрузить картинку</label>
-                <input asp-for="Image" class="form-control" type="file"/>
+                <label  class="control-label">Загрузить картинку</label>
+                <input  class="form-control" type="file"/>
             </div>
 
             <div class="form-group">
