--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -5,9 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Чугуевская центральная библиотека</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
 </head>
+
+<style>
+    .wrapper {
+        background-image: url(/img/wrapper.jpg)
+    }
+    .big-content p {
+        font-size: 1.2rem !important;
+    }
+</style>
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,7 +36,7 @@
                         <a href="" class="nav-link">Главная</a>
                     </li>
                     <li class="nav-item">
-                        <a href="" class="nav-link">Общая информация</a>
+                        <a asp-action="Index" asp-controller="ALLInfo" class="nav-link">Общая информация</a>
                     </li>
 
                      <li class="nav-item dropdown">
@@ -73,14 +82,47 @@
 </nav>
 
 
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
+            <div class="row mb-2">
+
+                <div class="col-md-6">
+
+                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col-auto d-none d-lg-block">
+                            <img class="bd-placeholder-img" width="200" height="250" src="/img/news-img/1.jpg" role="img"  preserveAspectRatio="xMidYMid slice" focusable="false"></img>
+                        </div> 
+                        <div class="col p-4 d-flex flex-column position-static">
+
+                            <h3 class="mb-0">Спортивные эстафеты по сказкам А. С Пушкина с. Верхняя Бреевка</h3>
+
+                            <div class="mb-1 text-muted">Nov 12</div>
+                        
+                            <p class="card-text mb-auto">
+                                В замечательный праздник - Пушкинский день России заведующий библиотекой-филиалом Романишин Инна Игоревна из с. 
+                                Верхняя Бреевка для ребят из летнего лагеря МКОУ СОШ №11 провела спортивные эстафеты по сказкам А. С Пушкина.
+                            </p>
+
+                            <a href="#" class="stretched-link">Подробнее...</a>
+                        </div>
+
+                       
+
+                    </div>
+                </div>
+
+            </div>
         </main>
     </div>
   
 
-    <footer class="border-top footer text-muted">
+
+
+
+
+
+<footer class="border-top footer text-muted">
     <div class="container-fluid">
             
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
