--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -69,12 +69,12 @@
                 </ul>
            
         </div>
-        <div class="row">
+        <div class="d-flex">
             <form action="" class="d-flex">
                 <input type="search" placeholder="Поиск" class="form-control mr-2"/>
                 <button class="btn btn-outline-success">Поиск</button>
              </form>
-          <a href="#" class="btn btn-light"><i class="bi bi-key"></i></a>  
+          <a asp-action="Register" asp-controller ="Account" class="btn btn-light"><i class="bi bi-key"></i></a>  
 
          </div>
         
@@ -111,7 +111,6 @@
 
                     </div>
                 </div>
-
             </div>
         </main>
     </div>
