--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -44,11 +44,11 @@
                         Отдел обсуживания
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Главная</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Анонсы</a></li>
-                        <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Мероприятия</a></li>
+                             <li><a class="dropdown-item" href="#">Главная</a></li>
+                             <li><hr class="dropdown-divider"></li>
+                             <li><a class="dropdown-item" href="#">Анонсы</a></li>
+                             <li><hr class="dropdown-divider"></li>
+                             <li><a class="dropdown-item" asp-action="newsList" asp-controller="News">Мероприятия</a></li>
            
                       </ul>
                       </li>
@@ -85,33 +85,7 @@
     <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
-            <div class="row mb-2">
-
-                <div class="col-md-6">
-
-                    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                        <div class="col-auto d-none d-lg-block">
-                            <img class="bd-placeholder-img" width="200" height="250" src="/img/news-img/1.jpg" role="img"  preserveAspectRatio="xMidYMid slice" focusable="false"></img>
-                        </div> 
-                        <div class="col p-4 d-flex flex-column position-static">
-
-                            <h3 class="mb-0">Спортивные эстафеты по сказкам А. С Пушкина с. Верхняя Бреевка</h3>
-
-                            <div class="mb-1 text-muted">Nov 12</div>
-                        
-                            <p class="card-text mb-auto">
-                                В замечательный праздник - Пушкинский день России заведующий библиотекой-филиалом Романишин Инна Игоревна из с. 
-                                Верхняя Бреевка для ребят из летнего лагеря МКОУ СОШ №11 провела спортивные эстафеты по сказкам А. С Пушкина.
-                            </p>
-
-                            <a href="#" class="stretched-link">Подробнее...</a>
-                        </div>
-
-                       
-
-                    </div>
-                </div>
-            </div>
+          
         </main>
     </div>
   
