--- a/Web/Views/News/CreateNews.cshtml
+++ b/Web/Views/News/CreateNews.cshtml
@@ -1,4 +1,4 @@
-﻿@model News 
+﻿@model Web.Models.News 
     
 <div class="row">
     <div class="col-sn-6">
@@ -19,7 +19,7 @@
 
             <div class="form-group">
                 <input class="btn btn-primary" type ="submit" value="Save"/>
-                <a class="btn btn-danger" asp-action = "newsList"></a>
+                <a class="btn btn-danger" asp-action = "NewsList"></a>
             </div>
         </form>
     </div>
