--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                              <li><hr class="dropdown-divider"></li>
                              <li><a class="dropdown-item" href="#">Анонсы</a></li>
                              <li><hr class="dropdown-divider"></li>
-                             <li><a class="dropdown-item" asp-action="newsList" asp-controller="News">Мероприятия</a></li>
+                             <li><a class="dropdown-item" asp-action="NewsList" asp-controller="News">Мероприятия</a></li>
            
                       </ul>
                       </li>
