--- a/Web/Views/_ViewImports.cshtml
+++ b/Web/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
-﻿@using WebApplication1
-@using WebApplication1.Models
+﻿@using Web.Models
+@using Web.ViewModels.Announces
+@using Web.ViewModels.News
+@using Web.ViewModels.Auth
+@using Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
