--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -74,8 +74,8 @@
                 <input type="search" placeholder="Поиск" class="form-control mr-2"/>
                 <button class="btn btn-outline-success">Поиск</button>
              </form>
-          <a asp-action="Register" asp-controller ="Account" class="btn btn-light"><i class="bi bi-key"></i></a>  
-
+            <a asp-action="Login" asp-controller ="Account" class="btn btn-light"><i class="bi bi-key"></i></a>  
+            <a asp-action="Logout" asp-controller ="Account" class="btn btn-light"><i class="bi bi-door-closed"></i></a>  
          </div>
         
     </div>
