--- a/Web/Views/News/List.cshtml
+++ b/Web/Views/News/List.cshtml
@@ -61,7 +61,7 @@
                              width="60"
                              class="mb-2 rounded-circle img-thumbnail">
                     </div>
-                    <a href="#" class="stretched-link">Подробнее...</a>
+                    <a asp-controller="News" asp-action="Detailed" asp-route-newsId ="@news.Id" class="stretched-link">Подробнее...</a>
                 </div>
             </div>
         }
