--- a/Web/Views/News/Create.cshtml
+++ b/Web/Views/News/Create.cshtml
@@ -38,7 +38,7 @@
 
             <div class="form-group">
                 <input class="btn btn-primary" type="submit" value="Save"/>
-                <a class="btn btn-danger" asp-action="NewsList"></a>
+                <a class="btn btn-danger" asp-action="List"></a>
             </div>
         </form>
     </div>
