--- a/Web/Views/News/Detailed.cshtml
+++ b/Web/Views/News/Detailed.cshtml
@@ -1,6 +1,9 @@
 @using System.Globalization
 @model DetailedNews
-
+<form asp-action="Delete" asp-controller="News" asp-route-newsId="@Model.Id" method="post">
+    <button type="submit" class="btn btn-danger">Удалить</button>
+    <br/>
+</form>
 <div>@Model.PostDate.ToString("yyyy MMMM dd", new CultureInfo("ru-Ru"))</div> <br/>
 <div>
     <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.Images.First()))"
