--- a/Web/Views/News/Detailed.cshtml
+++ b/Web/Views/News/Detailed.cshtml
@@ -1,12 +1,18 @@
 @using System.Globalization
 @model DetailedNews
+
+<button class="btn btn-info">
+    <a asp-action="Edit" asp-controller="News" asp-route-newsId="@Model.Id" >Редактировать</a>
+</button>
+<br/>
 <form asp-action="Delete" asp-controller="News" asp-route-newsId="@Model.Id" method="post">
     <button type="submit" class="btn btn-danger">Удалить</button>
     <br/>
 </form>
+<div>@Model.Author.Login</div>
 <div>@Model.PostDate.ToString("yyyy MMMM dd", new CultureInfo("ru-Ru"))</div> <br/>
 <div>
-    <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.Images.First()))"
+    <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Model.Images.First().Value))"
          alt="Image"
          height="60"
          width="60"
@@ -18,7 +24,7 @@
 <div>
     @foreach (var image in Model.Images.Skip(1))
     {
-        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(image))"
+        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(image.Value))"
              alt="Image"
              height="60"
              width="60"
