--- a/Web/Views/Announces/List.cshtml
+++ b/Web/Views/Announces/List.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Globalization
+@using Web
 @model List<LightAnnounce>
 
 
@@ -7,9 +8,9 @@
     <div class="col-md-6">
         @foreach (var announce in Model)
         {
-            <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="row g-0 border rounded flex-md-row mb-4 shadow-sm h-md-250">
 
-                <div class="col p-4 d-flex flex-column position-static">
+                <div class="col p-4">
                     
                     <div class="mb-1 text-muted">@announce.AnnounceDate.ToString("yyyy MMMM dd", new CultureInfo("ru-Ru"))</div>
 
@@ -21,7 +22,16 @@
                              width="60"
                              class="mb-2 rounded-circle img-thumbnail">
                     </div>
-                    <a asp-controller="Announces" asp-action="Detailed" asp-route-newsId ="@announce.Id" class="stretched-link">Подробнее...</a>
+                    <div>
+                        <a asp-controller="Announces" asp-action="Detailed" asp-route-announceId ="@announce.Id" >Подробнее... </a> <br/> <br/>
+                    </div>
+                    @if (User.IsAdmin())
+                    {
+                        <form asp-action="Delete" asp-controller="Announces" asp-route-announceId="@announce.Id" method="post">
+                            <button type="submit" class="btn btn-danger">Удалить</button>
+                            <br/>
+                        </form>
+                    }
                 </div>
             </div>
         }
