--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Web
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
@@ -75,7 +76,10 @@
                 <button class="btn btn-outline-success">Поиск</button>
              </form>
             <a asp-action="Login" asp-controller ="Account" class="btn btn-light"><i class="bi bi-key"></i></a>  
-            <a asp-action="Logout" asp-controller ="Account" class="btn btn-light"><i class="bi bi-door-closed"></i></a>  
+            @if(User.IsAdmin())
+            {
+                <a asp-action="Logout" asp-controller ="Account" class="btn btn-light"><i class="bi bi-door-closed"></i></a>  
+            }
          </div>
         
     </div>
